tests/negative/test_data_name_taken.orb
fnc main () () {
    sym (x 0);
    data::global x { a:i32 };
};